# trial-lambda-rust

./: .gitignore  Dockerfile.rust  Makefile  docker-compose.yml  readme.md
infrastructure/functions/lambda/: Cargo.toml
infrastructure/functions/trial/: Cargo.toml
infrastructure/functions/trial/src/: main.rs
infrastructure/modules/apigw/: main.tf  output.tf  variables.tf
infrastructure/modules/apigw/deploy/: main.tf  variables.tf
infrastructure/modules/apigw/develop/: main.tf  variables.tf
infrastructure/modules/apigw/domain/: main.tf  variables.tf
infrastructure/modules/apigw/lambda_integration/: main.tf  variables.tf
infrastructure/modules/apigw/route/: main.tf  variables.tf
infrastructure/modules/apigwv2/: main.tf  output.tf  variables.tf
infrastructure/modules/apigwv2/domain/: main.tf
infrastructure/modules/apigwv2/lambda_integration/: main.tf  output.tf
infrastructure/modules/apigwv2/route/: main.tf  variables.tf
infrastructure/modules/dynamodb/: main.tf  output.tf  variables.tf
infrastructure/modules/lambda/: main.tf  output.tf  variables.tf
infrastructure/service/: main.tf  openapi.yml  terraform.tfvars.sample  variables.tf
scripts/: build.sh
