[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3.0"
lambda_http = "0.3.0"
serde = "1.0.124"
serde_derive = "1.0.124"
serde_json = "1.0.64"
aws-config = "0.47.0"
aws-sdk-dynamodb = "0.17.0"
tokio = { version="1.4.0", features = ["full"] }
